# se-theory-neutral-substrate

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  NeutralSubstrate.lean  README.md  SE_MANIFEST.toml  lake-manifest.json  lakefile.toml  pyproject.toml  shape.ps1  zensical.toml
.github/workflows/: ci-python-zensical.yml
NeutralSubstrate/: Admissibility.lean  Basic.lean  Core.lean  Invariants.lean  Separation.lean  Spec.lean  Structure.lean  Surface.lean  Theorems.lean  Witness.lean
data/contract/: invariant-registry.json  manifest.toml  proof-registry.json  regime-registry.json  relation-registry.json
data/neutral-substrate/: neutral-substrate-catalog.json  substrate-axiom-registry.json  substrate-predicate-registry.json  substrate-requirement-registry.json  substrate-theorem-registry.json  substrate-type-registry.json  traceability-registry.json
docs/: index.md
docs/en/: index.md  process-040.md  process.md
reference/: dependency-registry.toml  index.toml  proof-registry.json  substrate-axioms.toml  substrate-predicates.toml  substrate-requirements.toml  substrate-theorems.toml  substrate-types.toml  traceability-registry.toml
src/se_theory_neutral_substrate/: __init__.py  __main__.py  cli.py  export.py  lean_surface.py  load.py  orchestrate.py  paths.py  ref_utils.py  reference.py  scaffold_reference.py  validate_reference.py
src/se_theory_neutral_substrate/commands/: reference.py  root.py  (+1 more)
test/: TestAll.lean  TestBasic.lean  TestRegime.lean
tests/: test_export.py  test_load.py  test_orchestrate.py  test_paths.py  test_reference.py
